src/components/textarea/textarea.scss
:host {
  @apply inline-block;
  inline-size: 20rem;
  block-size: 10rem;
}

// .container:focus {
//   @apply outline-none border-color-brand border-2 border-solid;
// }

// .container:focus textarea {
//   @apply border-none;
// }

// .container:focus .footer {
//   @apply border-none;
//   border-block-start: 1px solid var(--calcite-ui-border-3);
// }

textarea {
  @apply block 
  text-color-1 
  min-w-full
  bg-foreground-1 
  box-border
  border-color-input  
  border
  border-b-0
  font-sans;
}

.footer {
  @apply flex 
  flex-row 
  bg-foreground-1 
  box-border 
  border-color-input  
  border  
  border-solid
  justify-between;
  border-block-start: 1px solid var(--calcite-ui-border-3);
}

textarea:focus {
  @apply outline-none border-color-brand border-2 border-solid border-b-2;
}

.textarea-invalid {
  @apply border-color-danger border border-solid border-b;
}

.textarea-invalid:focus {
  @apply border-color-danger border-2 border-solid;
}

.character-limit {
  @apply flex justify-end text-color-2 grow items-center;
}

.character-overlimit {
  @apply font-bold text-danger;
}

.resize-disabled {
  resize: none;
}
.resize-disabled--x {
  resize: vertical;
}
.resize-dsiabled--y {
  resize: horizontal;
}

:host([scale="s"]) {
  @apply text-n2;
  textarea {
    @apply py-1 px-2;
    block-size: theme("spacing.33");
  }
  .footer {
    @apply py-1 px-2 h-7;
  }
  .character-limit {
    @apply px-2;
  }
}

:host([scale="s"]) {
  textarea,
  .footer,
  .character-limit {
    @apply text-n2;
  }
}

:host([scale="m"]) {
  textarea {
    @apply py-2 px-3;
    block-size: theme("spacing.31");
  }
  .footer {
    @apply py-2 px-3 h-9;
  }
  .character-limit {
    @apply px-3;
  }
}

:host([scale="m"]) {
  textarea,
  .footer,
  .character-limit {
    @apply text-n1;
  }
}

:host([scale="l"]) {
  @apply text-0;
  textarea {
    @apply py-3 px-4;
    block-size: theme("spacing.29");
  }
  .footer {
    @apply py-3 px-4 h-11;
  }
  .character-limit {
    @apply px-4;
  }
}

:host([scale="l"]) {
  textarea,
  .footer,
  .character-limit {
    @apply text-0;
  }
}

:host(:not([footer])) textarea {
  @apply border-b;
  block-size: 100%;
  &:focus {
    @apply border-b-2;
  }
}

@include hidden-form-input();

.readonly {
  @apply bg-background font-medium;
}

:host([disabled]) {
  textarea,
  footer {
    @apply opacity-50;
  }
}

